Modificando readme y organizando documentacion swagger
