# app/Http/Controllers/AgendaController.php
@@ -7,70 +7,8 @@ use App\Models\Client;
 use App\Models\Agenda;
 use Illuminate\Support\Facades\Validator;
 
-/**
-* @OA\Server(url="http://127.0.0.1:8000")
-*/
-
 class AgendaController extends ResponseController
 {
-
-/**
- * @OA\Post(
- *     path="/api/addAgenda",
- *     tags={"Agregar agenda"},
- *     @OA\Parameter(
- *         name="id_client",
- *         in="query",
- *         description="Id del cliente",
- *         required=true,
- *         @OA\Schema(type="integer")
- *     ),
- *     @OA\Parameter(
- *         name="affair",
- *         in="query",
- *         description="Asunto de la agenda",
- *         required=true,
- *         @OA\Schema(type="string")
- *     ),
- *      @OA\Parameter(
- *         name="date",
- *         in="query",
- *         description="Fecha agenda Y-m-d H:i",
- *         required=true,
- *         @OA\Schema(type="string")
- *     ),
- *      @OA\Parameter(
- *         name="status",
- *         in="query",
- *         description="Estado de la Agenda : Programada - Realizada - Cancelada - No asistida ",
- *         required=true,
- *         @OA\Schema(type="string")
- *     ),
- *     @OA\RequestBody(
- *          @OA\MediaType(mediaType="application/form-data",
- *         )
- *      ),
- *     @OA\Response(
- *         response="200",
- *         description="Creación de cliente",
- *         @OA\JsonContent(
- *          required={"id_client","affair","date","status"},
- *          @OA\Property(property="id_client", type="integer", format="id_client", example="1"),
- *          @OA\Property(property="affair", type="string", format="affair", example="Reunión"),
- *          @OA\Property(property="date", type="date", example="2020-09-10 10:06"),
- *          @OA\Property(property="status", type="string", example="Programada"),
- *          @OA\Property(property="id", type="integer", example="1"),
- *          )
- *     ),
- *     @OA\Response(
- *         response="422",
- *         description="Error de validación",
- *     ),
- *     security={
- *       {"api_key": {}}
- *     }
- * )
- */
 
     public function addAgenda(Request $request){
 
@@ -102,65 +40,6 @@ class AgendaController extends ResponseController
 
         return $message;
     }
-
-
-/**
- * @OA\Put(
- *     path="/api/editAgenda",
- *     tags={"Modificar agenda"},
- *     @OA\Parameter(
- *         name="id",
- *         in="query",
- *         description="Id de la agenda",
- *         required=true,
- *         @OA\Schema(type="integer")
- *     ),
- *     @OA\Parameter(
- *         name="affair",
- *         in="query",
- *         description="Asunto de la agenda",
- *         required=true,
- *         @OA\Schema(type="string")
- *     ),
- *      @OA\Parameter(
- *         name="date",
- *         in="query",
- *         description="Fecha agenda Y-m-d H:i",
- *         required=true,
- *         @OA\Schema(type="string")
- *     ),
- *      @OA\Parameter(
- *         name="status",
- *         in="query",
- *         description="Estado de la Agenda : Programada - Realizada - Cancelada - No asistida ",
- *         required=true,
- *         @OA\Schema(type="string")
- *     ),
- *     @OA\RequestBody(
- *          @OA\MediaType(mediaType="application/form-data",
- *         )
- *      ),
- *     @OA\Response(
- *         response="200",
- *         description="Creación de cliente",
- *         @OA\JsonContent(
- *          required={"id","affair","date","status"},
- *          @OA\Property(property="id", type="integer", format="id", example="1"),
- *          @OA\Property(property="id_client", type="integer", format="id", example="2"),
- *          @OA\Property(property="affair", type="string", format="affair", example="Reunión"),
- *          @OA\Property(property="date", type="date", example="2020-09-10 10:06"),
- *          @OA\Property(property="status", type="string", example="Cancelada"), *
- *          )
- *     ),
- *     @OA\Response(
- *         response="422",
- *         description="Error de validación",
- *     ),
- *     security={
- *       {"api_key": {}}
- *     }
- * )
- */
 
     public function editAgenda(Request $request){
 
